--- a/3.semester_eksamen_advanced_frontend_development-main/components/footer.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/components/footer.html
@@ -19,40 +19,37 @@
         <div class="flex_content text_right_desktop">
             <h3>Hurtig links</h3>
             <p>
-                <a href="../bliv-en-del-af-aska.html">Bliv medlem</a>
+                <a href="/bliv-en-del-af-aska.html">Bliv medlem</a>
             </p>
             <p>
-                <a href="../bliv-en-del-af-aska.html">Bliv sponsor</a>
+                <a href="/bliv-en-del-af-aska.html">Bliv sponsor</a>
             </p>
             <p>
                 <a
                     href="https://wondersport.dk/profilshop/aska.html?fbclid=IwAR1_ZgWV__yaSggiRXDUpxJQ_WTyYtMhbWpxqYBJVCeP5nvUFw3OyEjExpU">Bestil klubtøj</a >
             </p>
-           <p>
-              
-                   <button
-                    class="button5"
-                    onclick="document.getElementById('modal32').style.display='block'">
-                    <p>For administrator</p>
+            <p>
+                <a href="/admin.html">For adminitrator</a>
+            </p>
                 </button>
-             <div id="modal32" class="modal-footer">
+                <!--
+                <div id="modal32" class="modal-footer">
                     <div class="modal-text-footer">
                         <div class="flex2">
                             <span onclick="document.getElementById('modal32').style.display='none'">&times;</span >
                         </div>
                         <h3>Login</h3>
                         <div class="line4"></div>
-                            <div id="firebase-auth-container"> 
-                                <div class="login-wrapper">
-                                    <input type="email" name="loginEmail" id="loginEmail" placeholder="Email">
-                                    <input type="password" name="loginPassword" id="loginPassword" placeholder="Password">
-                                    <button class="loginBtn" onclick="login();">Login</button>
-                                    <p class="login-message"></p>
-                                  </div>
+                        <div id="firebase-auth-container"> 
+                            <div class="login-wrapper">
+                                <input type="email" name="loginEmail" id="loginEmail" placeholder="Email">
+                                <input type="password" name="loginPassword" id="loginPassword" placeholder="Password">
+                                <button class="loginBtn" onclick="login();">Login</button>
+                                <p class="login-message"></p>
                             </div>
-                        </p>
+                        </div>
                     </div>
-                </div>
+                </div> -->
             </p>
         </div>
     </div>
