--- a/3.semester_eksamen_advanced_frontend_development-main/components/header.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/components/header.html
@@ -1,27 +1,27 @@
 <header>
-  <a href="index.html">
-    <img src="images/logo_aska.svg" alt="ASKA logo" class="aska logo" />
+  <a href="/index.html">
+    <img src="/images/logo_aska.svg" alt="ASKA logo" class="aska logo" />
   </a>
-  <div class="burger" onclick="toggleMenu()">
+  <div class="burger">
     <div class="line line1"></div>
     <div class="line line2"></div>
     <div class="line line3"></div>
   </div>
   <nav>
     <ul class="nav-list">
-      <a href="index.html">
+      <a href="/index.html">
         <li class="nav-link">Forside</li>
       </a>
-      <a href="../kalender.html">
+      <a href="/kalender.html">
         <li class="nav-link">Kalender</li>
       </a>
-      <a href="../om-aska.html">
+      <a href="/om-aska.html">
         <li class="nav-link">Om ASKA</li>
       </a>
-      <a href="../bliv-en-del-af-aska.html">
+      <a href="/bliv-en-del-af-aska.html">
         <li class="nav-link">Bliv en del af ASKA</li>
       </a>
-      <a href="../aska-staevner.html">
+      <a href="/aska-staevner.html">
         <li class="nav-link">ASKA Stævner</li>
       </a>
     </ul>
