--- a/3.semester_eksamen_advanced_frontend_development-main/components/footer.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/components/footer.html
@@ -1,62 +1,41 @@
 <footer>
-    <div class="flex">
-        <div class="flex_content text_left_desktop">
-            <h3>Kontakt ASKA</h3>
-            <p class="address">Vilhelmsborgvej 1, 8320 Mårslet</p>
-            <a href="mailto:aska.bestyrelse@gmail.com">aska.bestyrelse@gmail.com</a >
-        </div>
-        <div class="flex_content">
-            <h3>Følg ASKA på de sociale medier:</h3>
-            <div class="some-icons">
-                <a href="https://www.instagram.com/islaenderklubben_aska/">
-                    <span class="iconify" data-icon="brandico:instagram-filled"></span>
-                </a>
-                <a href="https://www.facebook.com/groups/1389413571362415/">
-                    <span class="iconify" data-icon="brandico:facebook-rect"></span>
-                </a>
-            </div>
-        </div>
-        <div class="flex_content text_right_desktop">
-            <h3>Hurtig links</h3>
-            <p>
-                <a href="/bliv-en-del-af-aska.html">Bliv medlem</a>
-            </p>
-            <p>
-                <a href="/bliv-en-del-af-aska.html">Bliv sponsor</a>
-            </p>
-            <p>
-                <a
-                    href="https://wondersport.dk/profilshop/aska.html?fbclid=IwAR1_ZgWV__yaSggiRXDUpxJQ_WTyYtMhbWpxqYBJVCeP5nvUFw3OyEjExpU">Bestil klubtøj</a >
-            </p>
-            <p>
-                <a href="/admin.html">For adminitrator</a>
-            </p>
-                </button>
-                <!--
-                <div id="modal32" class="modal-footer">
-                    <div class="modal-text-footer">
-                        <div class="flex2">
-                            <span onclick="document.getElementById('modal32').style.display='none'">&times;</span >
-                        </div>
-                        <h3>Login</h3>
-                        <div class="line4"></div>
-                        <div id="firebase-auth-container"> 
-                            <div class="login-wrapper">
-                                <input type="email" name="loginEmail" id="loginEmail" placeholder="Email">
-                                <input type="password" name="loginPassword" id="loginPassword" placeholder="Password">
-                                <button class="loginBtn" onclick="login();">Login</button>
-                                <p class="login-message"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-            </p>
-        </div>
+  <div class="flex">
+    <div class="flex_content text_left_desktop">
+      <h3>Kontakt ASKA</h3>
+      <p class="address">Vilhelmsborgvej 1, 8320 Mårslet</p>
+      <a href="mailto:aska.bestyrelse@gmail.com">aska.bestyrelse@gmail.com</a>
     </div>
-    <div>
-        <h6 class="copyright">
-            © Copyright 2021 Maja Wennerwald, Camilla Nørgaard & Jesper Krüger. All rights
-            reserved.
-        </h6>
+    <div class="flex_content">
+      <h3>Følg ASKA på de sociale medier:</h3>
+      <div class="some-icons">
+        <a href="https://www.instagram.com/islaenderklubben_aska/">
+          <span class="iconify" data-icon="brandico:instagram-filled"></span>
+        </a>
+        <a href="https://www.facebook.com/groups/1389413571362415/">
+          <span class="iconify" data-icon="brandico:facebook-rect"></span>
+        </a>
+      </div>
     </div>
+    <div class="flex_content text_right_desktop">
+      <h3>Hurtig links</h3>
+      <p>
+        <a href="./bliv-en-del-af-aska.html">Bliv medlem</a>
+      </p>
+      <p>
+        <a href="./bliv-en-del-af-aska.html">Bliv sponsor</a>
+      </p>
+      <p>
+        <a
+          href="https://wondersport.dk/profilshop/aska.html?fbclid=IwAR1_ZgWV__yaSggiRXDUpxJQ_WTyYtMhbWpxqYBJVCeP5nvUFw3OyEjExpU"
+          >Bestil klubtøj</a
+        >
+      </p>
+      <p>
+        <a href="./admin.html">For adminitrator</a>
+      </p>
+    </div>
+  </div>
+  <div>
+    <h6 class="copyright">© Copyright 2021 Maja Wennerwald, Camilla Nørgaard & Jesper Krüger. All rights reserved.</h6>
+  </div>
 </footer>
